[tool.poetry]
name = "pytorch-eo"
version = "2023.01.15"
description = "Deep Learning for Earth Observation"
authors = ["EarthPulse <it@earthpulse.es>"]
readme = "README.md"
packages = [{include = "pytorch_eo"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.1"
torchvision = "^0.15.1"
lightning = "^2.0.1"
torchmetrics = "^1.0.1"
rasterio = "^1.3.5.post1"
scikit-image = "^0.19.3"
scikit-learn = "^1.2.1"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
